# jsvor

./: .gitignore  CMakeLists.txt  CMakeLists_footer.txt  CMakeLists_header.txt  README.md  common.pri  jsvor.pro  jsvor.sln
include/: JsonDefs.h  JsonErrors.h  JsonResolver.h  JsonSchema.h
jsvor_validator/: CMakeLists.txt  JsvorValidator.cc  jsvor_validator.pro
lib/: CMakeLists.txt  CoreSchema.inl  Defs.h  JsonErrors.cc  JsonResolver.cc  JsonSchema.cc  JsonType.cc  JsonType.h  JsonTypeImpl.cc  JsonTypeImpl.h  RapidJsonDefs.h  RapidJsonHelpers.cc  RapidJsonHelpers.h  Regex.cc  Regex.h  ValidationContext.cc  ValidationContext.h  ValidationContext.inl  jsvor.pro  jsvor.vcxproj  jsvor.vcxproj.filters
lib/types/: CustomTypes.cc  CustomTypes.h  JsonTypeImpl.h  JsonTypeImpl.inl  PrimitiveTypes.cc  PrimitiveTypes.h  PrimitiveTypes.inl
perftests/: CMakeLists.txt  JsonPerformanceTests.cc  WJValidator.cc  WJValidator.h  perftests.pro  perftests.vcxproj  perftests.vcxproj.filters
tests/: CMakeLists.txt  JsonSchemaTestSuite.cc  tests.pro  tests.vcxproj  tests.vcxproj.filters
tests_common/: CMakeLists.txt  Test.cc  Test.h  Validator.cc  Validator.h  tests_common.pro  tests_common.vcxproj  tests_common.vcxproj.filters
